work width tabs

--- a/app/index.html
+++ b/app/index.html
@@ -107,37 +107,37 @@
     </section>
     <section id="tabs" class="tabs">
         <div class="container tabs__wrap">
-            <div id="tabs-icon" class="tabs-icon">
-                <div class="tabs-icon__icon flex-cont justify-sb">
-                    <a href="#tabs-icon" data-target="anchore" class="icon-item">
+            <div id="tabs-icon" class="tabs-icon swiper-container">
+                <div class="tabs-icon__icon flex-cont justify-sb swiper-wrapper">
+                    <a href="#tabs-icon" data-target="anchore" class="icon-item swiper-slide">
                         <div class="icon-item__img">
                             <img src="images/img-tab-1.png" alt="contacts">
                         </div>
                         <div class="icon-item__name">Менеджер контактов</div>
                         <span class="icon-item__arrow icon-item__arrow_active"></span>
                     </a>
-                    <a href="#tabs-icon" data-target="anchore" class="icon-item">
+                    <a href="#tabs-icon" data-target="anchore" class="icon-item swiper-slide">
                         <div class="icon-item__img">
                             <img src="images/img-tab-2.png" alt="form">
                         </div>
                         <div class="icon-item__name">Формы</div>
                         <span class="icon-item__arrow icon-item__arrow_active"></span>
                     </a>
-                    <a href="#tabs-icon" data-target="anchore" class="icon-item">
+                    <a href="#tabs-icon" data-target="anchore" class="icon-item swiper-slide">
                         <div class="icon-item__img">
                             <img src="images/img-tab-3.png" alt="sms">
                         </div>
                         <div class="icon-item__name">SMS рассылка</div>
                         <span class="icon-item__arrow icon-item__arrow_active"></span>
                     </a>
-                    <a href="#tabs-icon" data-target="anchore" class="icon-item">
+                    <a href="#tabs-icon" data-target="anchore" class="icon-item swiper-slide">
                         <div class="icon-item__img">
                             <img src="images/img-tab-4.png" alt="qr">
                         </div>
                         <div class="icon-item__name">QR-коды</div>
                         <span class="icon-item__arrow icon-item__arrow_active"></span>
                     </a>
-                    <a href="#tabs-icon" data-target="anchore" class="icon-item">
+                    <a href="#tabs-icon" data-target="anchore" class="icon-item swiper-slide">
                         <div class="icon-item__img">
                             <img src="images/img-tab-5.png" alt="link">
                         </div>
@@ -146,108 +146,110 @@
                     </a>
                 </div>
             </div>
-            <div class="tabs-content">
-                <div class="tabs-content__wrap flex-cont justify-sb">
-                    <div class="tabs-content-img">
-                        <img src="images/tablet sms.png" alt="tablet" class="tabs-content-img__img">
-                    </div>
-                    <div class="tabs-content-text flex-cont">
-                        <div class="tabs-content-text__wrap">
-                            <div class="tabs-wrap-heading">
-                                <h1 class="tabs-wrap-heading__name">Менеджер контактов</h1>
-                            </div>
-                            <div class="tabs-wrap-text">
-                                <div class="tabs-wrap-text__text">
-                                    Рассылайте SMS-бонусы, коды подтверждения, сообщайте про акции и скидки, стимулируйте целевую аудиторию к покупкам. 
-                                    Постройте доверительные отношения с вашими клиентами!
+            <div class="tabs-content swiper-container">
+                <div class="tabs-content-box swiper-wrapper">
+                    <div class="tabs-content-box__wrap flex-cont justify-sb swiper-slide">
+                        <div class="tabs-content-img">
+                            <img src="images/tablet sms.png" alt="tablet" class="tabs-content-img__img">
+                        </div>
+                        <div class="tabs-content-text flex-cont">
+                            <div class="tabs-content-text__wrap">
+                                <div class="tabs-wrap-heading">
+                                    <h1 class="tabs-wrap-heading__name">Менеджер контактов</h1>
                                 </div>
-                            </div>
-                            <div class="tabs-wrap-btn">
-                                <a class="btn" href="#">Подробнее</a>
+                                <div class="tabs-wrap-text">
+                                    <div class="tabs-wrap-text__text">
+                                        Рассылайте SMS-бонусы, коды подтверждения, сообщайте про акции и скидки, стимулируйте целевую аудиторию к покупкам. 
+                                        Постройте доверительные отношения с вашими клиентами!
+                                    </div>
+                                </div>
+                                <div class="tabs-wrap-btn">
+                                    <a class="btn" href="#">Подробнее</a>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="tabs-content__wrap flex-cont justify-sb">
-                    <div class="tabs-content-img">
-                        <img src="images/tablet sms.png" alt="tablet" class="tabs-content-img__img">
-                    </div>
-                    <div class="tabs-content-text flex-cont">
-                        <div class="tabs-content-text__wrap">
-                            <div class="tabs-wrap-heading">
-                                <h1 class="tabs-wrap-heading__name">Формы</h1>
-                            </div>
-                            <div class="tabs-wrap-text">
-                                <div class="tabs-wrap-text__text">
-                                    Рассылайте SMS-бонусы, коды подтверждения, сообщайте про акции и скидки, стимулируйте целевую аудиторию к покупкам. 
-                                    Постройте доверительные отношения с вашими клиентами!
+                    <div class="tabs-content-box__wrap flex-cont justify-sb swiper-slide">
+                        <div class="tabs-content-img">
+                            <img src="images/tablet sms.png" alt="tablet" class="tabs-content-img__img">
+                        </div>
+                        <div class="tabs-content-text flex-cont">
+                            <div class="tabs-content-text__wrap">
+                                <div class="tabs-wrap-heading">
+                                    <h1 class="tabs-wrap-heading__name">Формы</h1>
                                 </div>
-                            </div>
-                            <div class="tabs-wrap-btn">
-                                <a class="btn" href="#">Подробнее</a>
+                                <div class="tabs-wrap-text">
+                                    <div class="tabs-wrap-text__text">
+                                        Рассылайте SMS-бонусы, коды подтверждения, сообщайте про акции и скидки, стимулируйте целевую аудиторию к покупкам. 
+                                        Постройте доверительные отношения с вашими клиентами!
+                                    </div>
+                                </div>
+                                <div class="tabs-wrap-btn">
+                                    <a class="btn" href="#">Подробнее</a>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="tabs-content__wrap flex-cont justify-sb">
-                    <div class="tabs-content-img">
-                        <img src="images/tablet sms.png" alt="tablet" class="tabs-content-img__img">
-                    </div>
-                    <div class="tabs-content-text flex-cont">
-                        <div class="tabs-content-text__wrap">
-                            <div class="tabs-wrap-heading">
-                                <h1 class="tabs-wrap-heading__name">SMS рассылка</h1>
-                            </div>
-                            <div class="tabs-wrap-text">
-                                <div class="tabs-wrap-text__text">
-                                    Рассылайте SMS-бонусы, коды подтверждения, сообщайте про акции и скидки, стимулируйте целевую аудиторию к покупкам. 
-                                    Постройте доверительные отношения с вашими клиентами!
+                    <div class="tabs-content-box__wrap flex-cont justify-sb swiper-slide">
+                        <div class="tabs-content-img">
+                            <img src="images/tablet sms.png" alt="tablet" class="tabs-content-img__img">
+                        </div>
+                        <div class="tabs-content-text flex-cont">
+                            <div class="tabs-content-text__wrap">
+                                <div class="tabs-wrap-heading">
+                                    <h1 class="tabs-wrap-heading__name">SMS рассылка</h1>
                                 </div>
-                            </div>
-                            <div class="tabs-wrap-btn">
-                                <a class="btn" href="#">Подробнее</a>
+                                <div class="tabs-wrap-text">
+                                    <div class="tabs-wrap-text__text">
+                                        Рассылайте SMS-бонусы, коды подтверждения, сообщайте про акции и скидки, стимулируйте целевую аудиторию к покупкам. 
+                                        Постройте доверительные отношения с вашими клиентами!
+                                    </div>
+                                </div>
+                                <div class="tabs-wrap-btn">
+                                    <a class="btn" href="#">Подробнее</a>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="tabs-content__wrap flex-cont justify-sb">
-                    <div class="tabs-content-img">
-                        <img src="images/tablet sms.png" alt="tablet" class="tabs-content-img__img">
-                    </div>
-                    <div class="tabs-content-text flex-cont">
-                        <div class="tabs-content-text__wrap">
-                            <div class="tabs-wrap-heading">
-                                <h1 class="tabs-wrap-heading__name">QR-коды</h1>
-                            </div>
-                            <div class="tabs-wrap-text">
-                                <div class="tabs-wrap-text__text">
-                                    Рассылайте SMS-бонусы, коды подтверждения, сообщайте про акции и скидки, стимулируйте целевую аудиторию к покупкам. 
-                                    Постройте доверительные отношения с вашими клиентами!
+                    <div class="tabs-content-box__wrap flex-cont justify-sb swiper-slide">
+                        <div class="tabs-content-img">
+                            <img src="images/tablet sms.png" alt="tablet" class="tabs-content-img__img">
+                        </div>
+                        <div class="tabs-content-text flex-cont">
+                            <div class="tabs-content-text__wrap">
+                                <div class="tabs-wrap-heading">
+                                    <h1 class="tabs-wrap-heading__name">QR-коды</h1>
                                 </div>
-                            </div>
-                            <div class="tabs-wrap-btn">
-                                <a class="btn" href="#">Подробнее</a>
+                                <div class="tabs-wrap-text">
+                                    <div class="tabs-wrap-text__text">
+                                        Рассылайте SMS-бонусы, коды подтверждения, сообщайте про акции и скидки, стимулируйте целевую аудиторию к покупкам. 
+                                        Постройте доверительные отношения с вашими клиентами!
+                                    </div>
+                                </div>
+                                <div class="tabs-wrap-btn">
+                                    <a class="btn" href="#">Подробнее</a>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="tabs-content__wrap flex-cont justify-sb">
-                    <div class="tabs-content-img">
-                        <img src="images/tablet sms.png" alt="tablet" class="tabs-content-img__img">
-                    </div>
-                    <div class="tabs-content-text flex-cont">
-                        <div class="tabs-content-text__wrap">
-                            <div class="tabs-wrap-heading">
-                                <h1 class="tabs-wrap-heading__name">Короткие ссылки</h1>
-                            </div>
-                            <div class="tabs-wrap-text">
-                                <div class="tabs-wrap-text__text">
-                                    Рассылайте SMS-бонусы, коды подтверждения, сообщайте про акции и скидки, стимулируйте целевую аудиторию к покупкам. 
-                                    Постройте доверительные отношения с вашими клиентами!
+                    <div class="tabs-content-box__wrap flex-cont justify-sb swiper-slide">
+                        <div class="tabs-content-img">
+                            <img src="images/tablet sms.png" alt="tablet" class="tabs-content-img__img">
+                        </div>
+                        <div class="tabs-content-text flex-cont">
+                            <div class="tabs-content-text__wrap">
+                                <div class="tabs-wrap-heading">
+                                    <h1 class="tabs-wrap-heading__name">Короткие ссылки</h1>
                                 </div>
-                            </div>
-                            <div class="tabs-wrap-btn">
-                                <a class="btn" href="#">Подробнее</a>
+                                <div class="tabs-wrap-text">
+                                    <div class="tabs-wrap-text__text">
+                                        Рассылайте SMS-бонусы, коды подтверждения, сообщайте про акции и скидки, стимулируйте целевую аудиторию к покупкам. 
+                                        Постройте доверительные отношения с вашими клиентами!
+                                    </div>
+                                </div>
+                                <div class="tabs-wrap-btn">
+                                    <a class="btn" href="#">Подробнее</a>
+                                </div>
                             </div>
                         </div>
                     </div>
