work icon section

--- a/app/index.html
+++ b/app/index.html
@@ -507,6 +507,10 @@
                             </div>
                         </div>
                     </div>
+                    <div class="services-box swiper-slide"></div>
+                    <div class="services-box swiper-slide"></div>
+                    <div class="services-box swiper-slide"></div>
+                    <div class="services-box swiper-slide"></div>
                 </div>
             </div>
         </div>
