--- a/app/index.html
+++ b/app/index.html
@@ -338,7 +338,9 @@
                     <div class="services-box swiper-slide">
                         <div class="services-box__box">
                             <div class="service-box-img">
-                                <img src="images/cart.png" alt="cart" class="service-box-img__img">
+                                <svg class="icon icon-cart">
+                                    <use xlink:href="#icon-cart"></use>
+                                </svg>
                             </div>
                             <div class="service-box-heading">
                                 <h4 class="service-box-heading__text">
@@ -355,7 +357,9 @@
                     <div class="services-box swiper-slide">
                         <div class="services-box__box">
                             <div class="service-box-img">
-                                <img src="images/imac.png" alt="imac" class="service-box-img__img">
+                                <svg class="icon icon-imac">
+                                    <use xlink:href="#icon-imac"></use>
+                                </svg>
                             </div>
                             <div class="service-box-heading">
                                 <h4 class="service-box-heading__text">
@@ -372,7 +376,9 @@
                     <div class="services-box swiper-slide">
                         <div class="services-box__box">
                             <div class="service-box-img">
-                                <img src="images/download.png" alt="download" class="service-box-img__img">
+                                <svg class="icon icon-download">
+                                    <use xlink:href="#icon-download"></use>
+                                </svg>
                             </div>
                             <div class="service-box-heading">
                                 <h4 class="service-box-heading__text">
@@ -389,7 +395,9 @@
                     <div class="services-box swiper-slide">
                         <div class="services-box__box">
                             <div class="service-box-img">
-                                <img src="images/notepad.png" alt="notepad" class="service-box-img__img">
+                                <svg class="icon icon-forms">
+                                    <use xlink:href="#icon-forms"></use>
+                                </svg>
                             </div>
                             <div class="service-box-heading">
                                 <h4 class="service-box-heading__text">
@@ -406,7 +414,9 @@
                     <div class="services-box swiper-slide">
                         <div class="services-box__box">
                             <div class="service-box-img">
-                                <img src="images/imac_screen.png" alt="imac_screen" class="service-box-img__img">
+                                <svg class="icon icon-card-contact">
+                                    <use xlink:href="#icon-card-contact"></use>
+                                </svg>
                             </div>
                             <div class="service-box-heading">
                                 <h4 class="service-box-heading__text">
@@ -423,7 +433,9 @@
                     <div class="services-box swiper-slide">
                         <div class="services-box__box">
                             <div class="service-box-img">
-                                <img src="images/newspaper.png" alt="newspaper" class="service-box-img__img">
+                                <svg class="icon icon-groups">
+                                    <use xlink:href="#icon-groups"></use>
+                                </svg>
                             </div>
                             <div class="service-box-heading">
                                 <h4 class="service-box-heading__text">
@@ -441,7 +453,9 @@
                     <div class="services-box swiper-slide">
                         <div class="services-box__box">
                             <div class="service-box-img">
-                                <img src="images/phone_message.png" alt="phone_message" class="service-box-img__img">
+                                <svg class="icon icon-mob-sms">
+                                    <use xlink:href="#icon-mob-sms"></use>
+                                </svg>
                             </div>
                             <div class="service-box-heading">
                                 <h4 class="service-box-heading__text">
@@ -458,7 +472,9 @@
                     <div class="services-box swiper-slide">
                         <div class="services-box__box">
                             <div class="service-box-img">
-                                <img src="images/calendar.png" alt="calendar" class="service-box-img__img">
+                                <svg class="icon icon-calendar">
+                                  <use xlink:href="#icon-calendar"></use>
+                              </svg>
                             </div>
                             <div class="service-box-heading">
                                 <h4 class="service-box-heading__text">
@@ -475,7 +491,9 @@
                     <div class="services-box swiper-slide">
                         <div class="services-box__box">
                             <div class="service-box-img">
-                                <img src="images/price-tag.png" alt="price-tag" class="service-box-img__img">
+                                <svg class="icon icon-tags">
+                                    <use xlink:href="#icon-tags"></use>
+                                </svg>
                             </div>
                             <div class="service-box-heading">
                                 <h4 class="service-box-heading__text">
@@ -492,7 +510,9 @@
                     <div class="services-box swiper-slide">
                         <div class="services-box__box">
                             <div class="service-box-img">
-                                <img src="images/presentation-arrow.png" alt="presentation" class="service-box-img__img">
+                                <svg class="icon icon-analytics">
+                                  <use xlink:href="#icon-analytics"></use>
+                              </svg>
                             </div>
                             <div class="service-box-heading">
                                 <h4 class="service-box-heading__text">
