finished section services

--- a/app/index.html
+++ b/app/index.html
@@ -357,82 +357,6 @@
                     <div class="services-box swiper-slide">
                         <div class="services-box__box">
                             <div class="service-box-img">
-                                <svg class="icon icon-imac">
-                                    <use xlink:href="#icon-imac"></use>
-                                </svg>
-                            </div>
-                            <div class="service-box-heading">
-                                <h4 class="service-box-heading__text">
-                                    Гибкое API
-                                </h4>
-                            </div>
-                            <div class="service-box-text">
-                                <div class="service-box-text__text">
-                                    Автоматизация процессов, интеграция с ПО
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="services-box swiper-slide">
-                        <div class="services-box__box">
-                            <div class="service-box-img">
-                                <svg class="icon icon-download">
-                                    <use xlink:href="#icon-download"></use>
-                                </svg>
-                            </div>
-                            <div class="service-box-heading">
-                                <h4 class="service-box-heading__text">
-                                    Простой импорт
-                                </h4>
-                            </div>
-                            <div class="service-box-text">
-                                <div class="service-box-text__text">
-                                    Загружайте клиентскую базу в несколько кликов
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="services-box swiper-slide">
-                        <div class="services-box__box">
-                            <div class="service-box-img">
-                                <svg class="icon icon-forms">
-                                    <use xlink:href="#icon-forms"></use>
-                                </svg>
-                            </div>
-                            <div class="service-box-heading">
-                                <h4 class="service-box-heading__text">
-                                    Сбор контактов
-                                </h4>
-                            </div>
-                            <div class="service-box-text">
-                                <div class="service-box-text__text">
-                                    Наполняйте клиентскую базу новыми контактами
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="services-box swiper-slide">
-                        <div class="services-box__box">
-                            <div class="service-box-img">
-                                <svg class="icon icon-card-contact">
-                                    <use xlink:href="#icon-card-contact"></use>
-                                </svg>
-                            </div>
-                            <div class="service-box-heading">
-                                <h4 class="service-box-heading__text">
-                                    Контактная карта
-                                </h4>
-                            </div>
-                            <div class="service-box-text">
-                                <div class="service-box-text__text">
-                                    Подробная информация по каждому клиенту
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="services-box swiper-slide">
-                        <div class="services-box__box">
-                            <div class="service-box-img">
                                 <svg class="icon icon-groups">
                                     <use xlink:href="#icon-groups"></use>
                                 </svg>
@@ -446,6 +370,25 @@
                                 <div class="service-box-text__text">
                                     Сегментируйте базу 
                                     по любым параметрам
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="services-box swiper-slide">
+                        <div class="services-box__box">
+                            <div class="service-box-img">
+                                <svg class="icon icon-imac">
+                                    <use xlink:href="#icon-imac"></use>
+                                </svg>
+                            </div>
+                            <div class="service-box-heading">
+                                <h4 class="service-box-heading__text">
+                                    Гибкое API
+                                </h4>
+                            </div>
+                            <div class="service-box-text">
+                                <div class="service-box-text__text">
+                                    Автоматизация процессов, интеграция с ПО
                                 </div>
                             </div>
                         </div>
@@ -472,6 +415,25 @@
                     <div class="services-box swiper-slide">
                         <div class="services-box__box">
                             <div class="service-box-img">
+                                <svg class="icon icon-download">
+                                    <use xlink:href="#icon-download"></use>
+                                </svg>
+                            </div>
+                            <div class="service-box-heading">
+                                <h4 class="service-box-heading__text">
+                                    Простой импорт
+                                </h4>
+                            </div>
+                            <div class="service-box-text">
+                                <div class="service-box-text__text">
+                                    Загружайте клиентскую базу в несколько кликов
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="services-box swiper-slide">
+                        <div class="services-box__box">
+                            <div class="service-box-img">
                                 <svg class="icon icon-calendar">
                                   <use xlink:href="#icon-calendar"></use>
                               </svg>
@@ -491,6 +453,25 @@
                     <div class="services-box swiper-slide">
                         <div class="services-box__box">
                             <div class="service-box-img">
+                                <svg class="icon icon-forms">
+                                    <use xlink:href="#icon-forms"></use>
+                                </svg>
+                            </div>
+                            <div class="service-box-heading">
+                                <h4 class="service-box-heading__text">
+                                    Сбор контактов
+                                </h4>
+                            </div>
+                            <div class="service-box-text">
+                                <div class="service-box-text__text">
+                                    Наполняйте клиентскую базу новыми контактами
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                     <div class="services-box swiper-slide">
+                        <div class="services-box__box">
+                            <div class="service-box-img">
                                 <svg class="icon icon-tags">
                                     <use xlink:href="#icon-tags"></use>
                                 </svg>
@@ -503,6 +484,25 @@
                             <div class="service-box-text">
                                 <div class="service-box-text__text">
                                     Данные из контакта для персонализации рассылок
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="services-box swiper-slide">
+                        <div class="services-box__box">
+                            <div class="service-box-img">
+                                <svg class="icon icon-card-contact">
+                                    <use xlink:href="#icon-card-contact"></use>
+                                </svg>
+                            </div>
+                            <div class="service-box-heading">
+                                <h4 class="service-box-heading__text">
+                                    Контактная карта
+                                </h4>
+                            </div>
+                            <div class="service-box-text">
+                                <div class="service-box-text__text">
+                                    Подробная информация по каждому клиенту
                                 </div>
                             </div>
                         </div>
@@ -527,13 +527,16 @@
                             </div>
                         </div>
                     </div>
+                    <!-- <div class="services-box swiper-slide"></div>
                     <div class="services-box swiper-slide"></div>
                     <div class="services-box swiper-slide"></div>
-                    <div class="services-box swiper-slide"></div>
-                    <div class="services-box swiper-slide"></div>
+                    <div class="services-box swiper-slide"></div> -->
                 </div>
             </div>
         </div>
+    </section>
+    <section class="price">
+        <div class="container"></div>
     </section>
     
 
